methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:5: error: type mismatch;
 found   : java.awt.Color
 required: String
    if (isFacingTrail(c)) {
                      ^SlugSnail:10: error: type mismatch;
 found   : java.awt.Color
 required: String
      if (isFacingTrail(c)) {
                        ^SlugSnail:16: error: type mismatch;
 found   : java.awt.Color
 required: String
        if (isFacingTrail(c)) {
                          ^